--- a/framework-design/Resources/URL/URLs.properties
+++ b/framework-design/Resources/URL/URLs.properties
@@ -22,3 +22,6 @@ newsIT = https://itelavon.us.bank-dns.com/en_US/about/news.html
 
 #Job Search
 jobSearch = https://usbank.taleo.net/careersection/10000/joblist.ftl
+
+#Amazon
+amazonLive = https://amazon.in
