Reporting integrated with the code!

--- a/framework-design/Resources/ObjectRepository/AmazonObjects.properties
+++ b/framework-design/Resources/ObjectRepository/AmazonObjects.properties
@@ -1,7 +1,7 @@
 #All objects related to Amazon.in
 
 hdr_Amazon = //span[normalize-space(.)='Amazon']|xpath
-lnk_SignIn = nav-link-yourAccount|id
+lnk_SignIn = .//*[@id='nav-link-yourAccount']/span[2]/span|xpath
 btn_SignIn = (//a[normalize-space(.)='Sign in'])[1]|xpath
 
 
