Made several changes to the repository. 1. Introduced block files- Block files consist of self-contained blocks of keywords that can be reused 2. Developed keyword for improved wait times using fluent wait 3. Removed unnecessary files. 4. Included sample reports

--- a/framework-design/Resources/ObjectRepository/AmazonObjects.properties
+++ b/framework-design/Resources/ObjectRepository/AmazonObjects.properties
@@ -11,3 +11,4 @@ txt_UserName = .//*[@id='ap_email']|xpath
 txt_Password = .//*[@id='ap_password']|xpath
 btn_Login = signInSubmit|id
 chkBox_RememberMe = //input[@name='rememberMe']|xpath
+btn_Continue = .//*[@id='continue']|xpath
